# genetic-algorithm

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cmake_runner.sh  main.c  run.sh  run_linux.sh  run_windows.bat
assets/: hideSameValue.c  livePrinter.c  max.c  min.c  printArray.c  printMatrix.c  reverseArray.c  showTIme.c  sortChromosome.c  sortChromosomes.c  swap.c
functions/: breakPointGenerator.c  c.c  childG.c  childGenerator.c  chromosomeMaker.c  crossover.c  crossoverTypes.c  makeBin.c  makePerm.c  parentSelection.c  sharedMemory.c  tweak.c
functions/multiprocessing/: chromosomeMP.c  evalMP.c  multiprocessor.c
headers/: assets.h  assistant.h  crossover.h  mainHeaders.h  mainMenu.h  makers.h  menu.h  printing.h  sharedLib.h  sharedMacros.h  sharedMemory.h  sharedMenu.h
headers/multiproseccing/: chromosomeMP.h  multiprocessor.h
includes/: assets.h  mainMenu.h  makers.h  printing.h  sharedMemory.h  sharedMenu.h
includes/multiproseccing/: multiprocessor.h
includes/services/: knapsack.h  queens.h  tsp.h
includes/types/: functionTypedef.h
menus/: getService.c  setService.c  showServices.c
menus/mainMenus/: getService.c  setService.c  showServices.c
menus/sharedMenus/: crossoverMenu.c  intInput.c  sharedInitInputs.c
plot/: plot.c  plot.h  plotPY.c  plotPY.h
services/knapsack/: evalKnapsack.c  initKnapsack.c  knapsackMain.c
services/queens/: evalQueens.c  initQueens.c  queensMain.c
services/tsp/: diameterZeroMaker.c  (+3 more)
structs/: GeneralTypes.h  knapsackStruct.c  knapsackStruct.h
types/: GeneralTypes.h  functionTypedef.h  typedef.h
